--- a/src/main/res/layout/disabled_overlay_page.xml
+++ b/src/main/res/layout/disabled_overlay_page.xml
@@ -8,14 +8,16 @@
     tools:context=".OverlayPage">
 
 
-    <ImageView
-        android:id="@+id/image_comms_splash"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/wifi_signal_white"
+    <TextView
+        android:id="@+id/text_blocked_page"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_centerInParent="true"
-        android:contentDescription="progress indicator" />
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/overlay_no_license_msg"
+        android:textSize="@dimen/license_msg_txt_size"
+        />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
