--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -15,17 +15,24 @@
     <dimen name="service_page_col1_width">140dp</dimen>
     <dimen name="service_page_col3_width">100dp</dimen>
 
+    <!-- text sizes -->
+
     <dimen name="button_text_size">16sp</dimen>
     <dimen name="manual_text_size">12sp</dimen>
     <dimen name="regular_text_size">14sp</dimen>
     <dimen name="larger_text_size">16sp</dimen>
-    <dimen name="digital_panel_button_height">50dp</dimen>
+
+
+
+    <dimen name="digital_panel_button_height">40dp</dimen>
+    <dimen name="operating_hours_button_height">60dp</dimen>
+    <dimen name="button_backsave_height">35dp</dimen>
     <dimen name="button_margin">10dp</dimen>
     <dimen name="button_margin_10dp">10dp</dimen>
     <dimen name="button_margin_3dp">3dp</dimen>
 
     <dimen name="main_screen_sidemargin">20dp</dimen>
-    <dimen name="maintenance_page_config_label_width">100dp</dimen>
+    <dimen name="maintenance_page_config_label_width">150dp</dimen>
     <dimen name="settings_pg_label_width">0.45</dimen>
     <dimen name="settings_pg_value_width">0.55</dimen>
     <dimen name="fab_margin">16dp</dimen>
@@ -36,6 +43,7 @@
     <dimen name="light_setting_pg_slider_row_height">28dp</dimen>
     <dimen name="textview_default_top_margin">10dp</dimen>
     <dimen name="spinner_items_vert_margin">5dp</dimen>
+    <dimen name="license_msg_txt_size">40sp</dimen>
 
 
 </resources>
