major overhaul over preset management - moving to JSON

--- a/src/main/res/layout/trs_maintenance_page.xml
+++ b/src/main/res/layout/trs_maintenance_page.xml
@@ -49,7 +49,8 @@
                     android:scaleType="fitCenter"
                     android:tag="D65"
                     android:text="D65\n1540"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="@dimen/button_text_size"
+                    android:onClick="button_click"/>
 
                 <Button
                     android:id="@+id/btnL2"
