commit post-long break while waiting for new device to arrive

--- a/src/main/res/layout/disabled_overlay_page.xml
+++ b/src/main/res/layout/disabled_overlay_page.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:background="#af0000ff"
     android:orientation="vertical"
-    tools:context=".OverlayPage">
+    tools:context=".OverlayPage"
+    >
 
 
     <TextView
