--- a/src/main/res/layout/trs_digital_panel.xml
+++ b/src/main/res/layout/trs_digital_panel.xml
@@ -100,7 +100,7 @@
                     android:text="D65"
                     android:tag="Button1"
                     android:layout_marginEnd="10dp"
-                    android:onClick="btnClicked_UV_normal"
+                    android:onClick="btnClicked"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -116,7 +116,7 @@
                     android:gravity="center"
                     android:text="D50"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:onClick="btnClicked_UV_normal"
+                    android:onClick="btnClicked"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -129,7 +129,7 @@
                     android:layout_height="@dimen/digital_panel_button_height"
                     android:gravity="center"
                     android:text="A"
-                    android:onClick="btnClicked_UV_normal"
+                    android:onClick="btnClicked"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -155,7 +155,7 @@
                     android:layout_height="@dimen/digital_panel_button_height"
                     android:gravity="center"
                     android:text="LED"
-                    android:onClick="btnClicked_UV_normal"
+                    android:onClick="btnClicked"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -171,7 +171,7 @@
                     android:gravity="center"
                     android:text="TL84"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:onClick="btnClicked_UV_normal"
+                    android:onClick="btnClicked"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -184,7 +184,7 @@
                     android:layout_height="@dimen/digital_panel_button_height"
                     android:gravity="center"
                     android:text="UVA"
-                    android:onClick="btnClicked_UV_normal"
+                    android:onClick="btnClicked"
                     android:layout_weight="4"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
