--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -34,6 +34,7 @@
 
     <dimen name="main_screen_sidemargin">20dp</dimen>
     <dimen name="maintenance_page_config_label_width">150dp</dimen>
+    <dimen name="maintenance_setting_vert_margin">2dp</dimen>
     <dimen name="settings_pg_label_width">0.45</dimen>
     <dimen name="settings_pg_value_width">0.55</dimen>
     <dimen name="fab_margin">16dp</dimen>
