--- a/src/main/res/layout/trs_settings.xml
+++ b/src/main/res/layout/trs_settings.xml
@@ -288,16 +288,16 @@
 
 
             </LinearLayout>
+
             <LinearLayout
                 android:id="@+id/lLayout_masterslave_row2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/main_screen_sidemargin"
-                android:layout_marginRight="@dimen/main_screen_sidemargin"
-                android:layout_marginTop="@dimen/settings_pg_masterslave_row_top_margin"
-                android:baselineAligned="false"
                 android:layout_below="@id/lLayout_masterslave_row1"
-                >
+                android:layout_marginLeft="@dimen/main_screen_sidemargin"
+                android:layout_marginTop="@dimen/settings_pg_masterslave_row_top_margin"
+                android:layout_marginRight="@dimen/main_screen_sidemargin"
+                android:baselineAligned="false">
 
 
                 <TextView
@@ -307,77 +307,74 @@
                     android:layout_weight="@dimen/settings_pg_masterslave_label_width"
                     android:gravity="center_vertical"
                     android:text="Group2"
-                    android:textColor="@color/dark_gray"
-                    />
+                    android:textColor="@color/dark_gray" />
 
                 <EditText
                     android:id="@+id/edit_group2_LED_full"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="100"
                     android:layout_marginEnd="@dimen/button_margin"
-                    android:layout_weight="@dimen/settings_pg_masterslave_value_width"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    android:theme="@style/EditTextGrayUnderline"
-                    android:textColorHint="@color/dark_gray"
                     android:focusableInTouchMode="false"
-                    android:onClick="check_for_edits"
                     android:inputType="number"
-                    />
+                    android:maxLines="1"
+                    android:onClick="check_for_edits"
+                    android:singleLine="true"
+                    android:text="100"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/dark_gray"
+                    android:textSize="13sp"
+                    android:theme="@style/EditTextGrayUnderline" />
+
                 <EditText
                     android:id="@+id/edit_group2_LED_dim"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="100"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_masterslave_value_width"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    android:theme="@style/EditTextGrayUnderline"
-                    android:textColorHint="@color/dark_gray"
                     android:focusableInTouchMode="false"
-                    android:onClick="check_for_edits"
                     android:inputType="number"
-                    />
+                    android:maxLines="1"
+                    android:onClick="check_for_edits"
+                    android:singleLine="true"
+                    android:text="100"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/dark_gray"
+                    android:textSize="13sp"
+                    android:theme="@style/EditTextGrayUnderline" />
+
                 <EditText
                     android:id="@+id/edit_group2_TL84_full"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="100"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_masterslave_value_width"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    android:theme="@style/EditTextGrayUnderline"
-                    android:textColorHint="@color/dark_gray"
                     android:focusableInTouchMode="false"
-                    android:onClick="check_for_edits"
                     android:inputType="number"
-                    />
+                    android:maxLines="1"
+                    android:onClick="check_for_edits"
+                    android:singleLine="true"
+                    android:text="100"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/dark_gray"
+                    android:textSize="13sp"
+                    android:theme="@style/EditTextGrayUnderline" />
+
                 <EditText
                     android:id="@+id/edit_group2_TL84_dim"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="100"
                     android:layout_marginEnd="@dimen/button_margin"
                     android:layout_weight="@dimen/settings_pg_masterslave_value_width"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/black"
-                    android:textSize="13sp"
-                    android:theme="@style/EditTextGrayUnderline"
-                    android:textColorHint="@color/dark_gray"
                     android:focusableInTouchMode="false"
-                    android:onClick="check_for_edits"
                     android:inputType="number"
-                    />
+                    android:maxLines="1"
+                    android:onClick="check_for_edits"
+                    android:singleLine="true"
+                    android:text="100"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/dark_gray"
+                    android:textSize="13sp"
+                    android:theme="@style/EditTextGrayUnderline" />
 
 
             </LinearLayout>
@@ -472,7 +469,7 @@
                     android:inputType="number"
                     />
 
-m
+
             </LinearLayout>
 
             <RelativeLayout
@@ -647,6 +644,7 @@ m
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/bottom_buttons_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/lLayoutbottomspace"
@@ -655,7 +653,6 @@ m
                 android:layout_marginRight="@dimen/main_screen_sidemargin"
                 android:layout_marginBottom="20dp"
                 android:baselineAligned="false"
-                android:id="@+id/bottom_buttons_layout"
 
                 >
 
@@ -670,6 +667,22 @@ m
                     android:gravity="center"
                     android:onClick="onClickBack"
                     android:text="BACK"
+                    android:textSize="@dimen/button_text_size" />
+
+                <Button
+                    android:id="@+id/button_reassign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="@dimen/button_margin_10dp"
+                    android:background="@color/torso_gray_button"
+                    android:onClick="onClickReassign"
+                    android:paddingLeft="25dp"
+                    android:paddingRight="25dp"
+                    android:text="Reassign"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size" />
 
 
