APK aligned to firmware version v0.16 + package name refactoring

--- a/src/main/res/menu/menu.xml
+++ b/src/main/res/menu/menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/menu_color_picker"
-        android:actionProviderClass="com.kiand.LED2match.HsvColorActionProvider"
+        android:actionProviderClass="com.morris.LEDbar_controller.HsvColorActionProvider"
         android:showAsAction="ifRoom"
         android:title="Color Picker"/>
 </menu>
