--- a/src/main/res/layout/activity_service.xml
+++ b/src/main/res/layout/activity_service.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@android:color/white"
-    tools:context="com.kiand.LED2match.ServicePageActivity">
+    tools:context="com.morris.LEDbar_controller.ServicePageActivity">
 
     <TextView android:text="Service page"
         android:layout_width="fill_parent"
