--- a/src/main/res/layout/color_popup.xml
+++ b/src/main/res/layout/color_popup.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <com.kiand.LED2match.HsvColorPickerView
+    <com.morris.LEDbar_controller.HsvColorPickerView
         android:id="@+id/color_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
