--- a/src/main/res/layout/light_settings.xml
+++ b/src/main/res/layout/light_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.kiand.LED2match.CustomLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.morris.LEDbar_controller.CustomLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -650,4 +650,4 @@
 
     </RelativeLayout>
 
-</com.kiand.LED2match.CustomLayout>
+</com.morris.LEDbar_controller.CustomLayout>
