--- a/src/main/res/menu/menu_.xml
+++ b/src/main/res/menu/menu_.xml
@@ -1,5 +1,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="com.kiand.LED2match.ServicePageActivity">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="com.morris.LEDbar_controller.ServicePageActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" android:showAsAction="never" />
 </menu>
