--- a/src/main/res/layout/trs_settings.xml
+++ b/src/main/res/layout/trs_settings.xml
@@ -724,7 +724,10 @@
                     android:paddingRight="25dp"
                     android:text="Reassign"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="@dimen/button_text_size"
+                    android:visibility="gone"
+                    />
+
 
 
                 <Button
