APK aligned to firmware version v0.22

--- a/src/main/res/layout/trs_settings.xml
+++ b/src/main/res/layout/trs_settings.xml
@@ -725,7 +725,7 @@
                     android:text="Reassign"
                     android:textColor="@color/black"
                     android:textSize="@dimen/button_text_size"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     />
 
 
